src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ALL</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STREET</columns>
        <filterScope>Everything</filterScope>
        <label>すべて</label>
    </listViews>
    <listViews>
        <fullName>GEKIATSU</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STREET</columns>
        <columns>LEAD.RATING</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RATING</field>
            <operation>equals</operation>
            <value>激アツ！</value>
        </filters>
        <label>激アツ！</label>
    </listViews>
    <listViews>
        <fullName>YAYAATSU</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STREET</columns>
        <columns>LEAD.RATING</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RATING</field>
            <operation>equals</operation>
            <value>ややアツ</value>
        </filters>
        <label>ややアツ</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>